add_subdirectory(buildVersionUpdate)
add_subdirectory(Compress)
add_subdirectory(CRCDiff)
add_subdirectory(versionUpdate)
# Utility library for WWVegas & Qt6 compatibility
add_subdirectory(WWQt6)
add_subdirectory(DebugWindow)
add_subdirectory(wdump)
add_subdirectory(W3DView)
add_subdirectory(ImagePacker)
add_subdirectory(ParticleEditor)
add_subdirectory(Launcher)
add_subdirectory(AptViewer)